--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "autoload": {
         "psr-4": {
             "AbstractFactory\\": "AbstractFactory/",
-            "Builder\\": "Builder/"
+            "Builder\\": "Builder/",
+            "FactoryMethod\\": "FactoryMethod/"
         }
     }
 }
