--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
             "Singleton\\": "Singleton/",
             "Adapter\\": "Adapter/",
             "Bridge\\": "Bridge/",
-            "Composite\\": "Composite/"
+            "Composite\\": "Composite/",
+            "Decorator\\": "Decorator/"
         }
     }
 }
