--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
             "Bridge\\": "Bridge/",
             "Composite\\": "Composite/",
             "Decorator\\": "Decorator/",
-            "Facade\\": "Facade/"
+            "Facade\\": "Facade/",
+            "Flyweight\\": "Flyweight/"
         }
     }
 }
