Add Proxy pattern

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
             "Composite\\": "Composite/",
             "Decorator\\": "Decorator/",
             "Facade\\": "Facade/",
-            "Flyweight\\": "Flyweight/"
+            "Flyweight\\": "Flyweight/",
+            "Proxy\\": "Proxy/"
         }
     }
 }
