Add Interpreter pattern

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
             "Flyweight\\": "Flyweight/",
             "Proxy\\": "Proxy/",
             "ChainOfResponsibility\\": "ChainOfResponsibility/",
-            "Command\\": "Command"
+            "Command\\": "Command/",
+            "Interpreter\\": "Interpreter/"
         }
     }
 }
