Add Memento pattern

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
             "Interpreter\\": "Interpreter/",
             "Iterator\\": "Iterator/",
             "IteratorUsingPhpSpl\\": "IteratorUsingPhpSpl/",
-            "Mediator\\": "Mediator"
+            "Mediator\\": "Mediator",
+            "Memento\\": "Memento"
         }
     }
 }
