Add Observer pattern

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
             "IteratorUsingPhpSpl\\": "IteratorUsingPhpSpl/",
             "Mediator\\": "Mediator",
             "Memento\\": "Memento",
-            "MediatorMemento\\": "MediatorMemento"
+            "MediatorMemento\\": "MediatorMemento",
+            "Observer\\": "Observer"
         }
     }
 }
