--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,12 @@
             "Interpreter\\": "Interpreter/",
             "Iterator\\": "Iterator/",
             "IteratorUsingPhpSpl\\": "IteratorUsingPhpSpl/",
-            "Mediator\\": "Mediator",
-            "Memento\\": "Memento",
-            "MediatorMemento\\": "MediatorMemento",
-            "Observer\\": "Observer",
-            "MediatorMementoObserver\\": "MediatorMementoObserver"
+            "Mediator\\": "Mediator/",
+            "Memento\\": "Memento/",
+            "MediatorMemento\\": "MediatorMemento/",
+            "Observer\\": "Observer/",
+            "MediatorMementoObserver\\": "MediatorMementoObserver/",
+            "State\\": "State/"
         }
     }
 }
