--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
             "MediatorMemento\\": "MediatorMemento/",
             "Observer\\": "Observer/",
             "MediatorMementoObserver\\": "MediatorMementoObserver/",
-            "State\\": "State/"
+            "State\\": "State/",
+            "Strategy\\": "Strategy/"
         }
     }
 }
