Add Visitor patteern

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
             "MediatorMementoObserver\\": "MediatorMementoObserver/",
             "State\\": "State/",
             "Strategy\\": "Strategy/",
-            "TemplateMethod\\": "TemplateMethod/"
+            "TemplateMethod\\": "TemplateMethod/",
+            "Visitor\\": "Visitor/"
         }
     }
 }
